# DeepMath

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  evaluation.py  example.sh  inference.py  pyproject.toml  requirements.txt  ruff.toml  training.py
configs/: evaluation.yaml  inference.yaml  training.yaml  vllm_agent_server.yaml
configs/hydra/launcher/: slurm.yaml
deep_math/: agent.py  fewshot.txt  metrics.py  models.py  prompts.py  rewards.py  training_utils.py  vllm_client.py  vllm_serve_agent.py
utils/: combine.py
