[project]
name = "deep-math"
version = "1.0.0"
description = "Library for training and evaluating Math agent."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Daniel Fleischer", email = "daniel.fleischer@intel.com"},
]
keywords = ["machine learning", "reinforcement learning", "mathematical reasoning", "AI agents", "GRPO", "NLP"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/intellabs/DeepMath"
Repository = "https://github.com/intellabs/DeepMath"
Issues = "https://github.com/intellabs/DeepMath/issues"
Documentation = "https://github.com/intellabs/DeepMath#readme"
dependencies = [
  "accelerate==1.6.0",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.11.18",
  "aiosignal==1.3.2",
  "airportsdata==20250224",
  "annotated-types==0.7.0",
  "antlr4-python3-runtime==4.9.3",
  "anyio==4.9.0",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "arrow==1.3.0",
  "astor==0.8.1",
  "asttokens==3.0.0",
  "async-lru==2.0.5",
  "attrs==25.3.0",
  "babel==2.17.0",
  "beautifulsoup4==4.13.4",
  "blake3==1.0.4",
  "bleach==6.2.0",
  "cachetools==5.5.2",
  "certifi==2025.4.26",
  "cffi==1.17.1",
  "cfgv==3.4.0",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cloudpickle==3.1.1",
  "comm==0.2.2",
  "compressed-tensors==0.9.3",
  "cupy-cuda12x==13.4.1",
  "datasets==3.5.0",
  "debugpy==1.8.14",
  "decorator==5.2.1",
  "deepspeed==0.16.7",
  "defusedxml==0.7.1",
  "deprecated==1.2.18",
  "depyf==0.18.0",
  "dill==0.3.8",
  "diskcache==5.6.3",
  "distlib==0.3.9",
  "distro==1.9.0",
  "dnspython==2.7.0",
  "docker-pycreds==0.4.0",
  "einops==0.8.1",
  "email-validator==2.2.0",
  "executing==2.2.0",
  "fastapi==0.115.12",
  "fastapi-cli==0.0.7",
  "fastjsonschema==2.21.1",
  "fastrlock==0.8.3",
  "filelock==3.18.0",
  "flash-attn",
  "fqdn==1.5.1",
  "frozenlist==1.6.0",
  "fsspec==2024.12.0",
  "gguf==0.16.2",
  "gitdb==4.0.12",
  "gitpython==3.1.44",
  "googleapis-common-protos==1.70.0",
  "grpcio==1.71.0",
  "h11==0.16.0",
  "hf-xet==1.0.5",
  "hjson==3.1.0",
  "httpcore==1.0.9",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "huggingface-hub==0.30.2",
  "hydra-core==1.3.2",
  "hydra-submitit-launcher==1.2.0",
  "identify==2.6.10",
  "idna==3.10",
  "importlib-metadata==8.0.0",
  "interegular==0.3.3",
  "ipykernel==6.29.5",
  "ipython==9.1.0",
  "ipython-pygments-lexers==1.1.1",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "jinja2==3.1.6",
  "jiter==0.9.0",
  "json5==0.12.0",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2025.4.1",
  "jupyter-client==8.6.3",
  "jupyter-core==5.7.2",
  "jupyter-events==0.12.0",
  "jupyter-lsp==2.2.5",
  "jupyter-server==2.15.0",
  "jupyter-server-terminals==0.5.3",
  "jupyterlab==4.4.0",
  "jupyterlab-pygments==0.3.0",
  "jupyterlab-server==2.27.3",
  "lark==1.2.2",
  "latex2sympy2-extended==1.10.1",
  "llguidance==0.7.19",
  "llvmlite==0.44.0",
  "lm-format-enforcer==0.10.11",
  "markdown-it-py==3.0.0",
  "markupsafe==3.0.2",
  "math-verify==0.7.0",
  "matplotlib-inline==0.1.7",
  "mdurl==0.1.2",
  "mistral-common==1.5.4",
  "mistune==3.1.3",
  "mpmath==1.3.0",
  "msgpack==1.1.0",
  "msgspec==0.19.0",
  "multidict==6.4.3",
  "multiprocess==0.70.16",
  "nbclient==0.10.2",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "networkx==3.4.2",
  "ninja==1.11.1.4",
  "nodeenv==1.9.1",
  "notebook-shim==0.2.4",
  "numba==0.61.2",
  "numpy==2.2.5",
  "nvidia-cublas-cu12==12.4.5.8",
  "nvidia-cuda-cupti-cu12==12.4.127",
  "nvidia-cuda-nvrtc-cu12==12.4.127",
  "nvidia-cuda-runtime-cu12==12.4.127",
  "nvidia-cudnn-cu12==9.1.0.70",
  "nvidia-cufft-cu12==11.2.1.3",
  "nvidia-curand-cu12==10.3.5.147",
  "nvidia-cusolver-cu12==11.6.1.9",
  "nvidia-cusparse-cu12==12.3.1.170",
  "nvidia-cusparselt-cu12==0.6.2",
  "nvidia-nccl-cu12==2.21.5",
  "nvidia-nvjitlink-cu12==12.4.127",
  "nvidia-nvtx-cu12==12.4.127",
  "omegaconf==2.3.0",
  "openai==1.76.0",
  "opencv-python-headless==4.11.0.86",
  "opentelemetry-api==1.26.0",
  "opentelemetry-exporter-otlp==1.26.0",
  "opentelemetry-exporter-otlp-proto-common==1.26.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.26.0",
  "opentelemetry-exporter-otlp-proto-http==1.26.0",
  "opentelemetry-proto==1.26.0",
  "opentelemetry-sdk==1.26.0",
  "opentelemetry-semantic-conventions==0.47b0",
  "opentelemetry-semantic-conventions-ai==0.4.3",
  "outlines==0.1.11",
  "outlines-core==0.1.26",
  "overrides==7.7.0",
  "packaging==25.0",
  "pandas==2.2.3",
  "pandocfilters==1.5.1",
  "parso==0.8.4",
  "partial-json-parser==0.2.1.1.post5",
  "peft==0.15.2",
  "pexpect==4.9.0",
  "pillow==11.2.1",
  "platformdirs==4.3.6",
  "pre-commit==4.2.0",
  "prometheus-client==0.21.1",
  "prometheus-fastapi-instrumentator==7.1.0",
  "prompt-toolkit==3.0.51",
  "propcache==0.3.1",
  "protobuf==4.25.7",
  "psutil==7.0.0",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "py-cpuinfo==9.0.0",
  "pyarrow==20.0.0",
  "pycountry==24.6.1",
  "pycparser==2.22",
  "pydantic==2.11.3",
  "pydantic-core==2.33.1",
  "pygments==2.19.1",
  "pylatexenc==2.10",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.0",
  "python-json-logger==3.3.0",
  "python-multipart==0.0.20",
  "pytz==2025.2",
  "pyyaml==6.0.2",
  "pyzmq==26.4.0",
  "ray==2.43.0",
  "referencing==0.36.2",
  "regex==2024.11.6",
  "requests==2.32.3",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rich==14.0.0",
  "rich-toolkit==0.14.3",
  "rpds-py==0.24.0",
  "safetensors==0.5.3",
  "scipy==1.15.2",
  "send2trash==1.8.3",
  "sentencepiece==0.2.0",
  "sentry-sdk==2.22.0",
  "setproctitle==1.3.4",
  "setuptools==75.8.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "smmap==5.0.2",
  "smolagents==1.15.0",
  "sniffio==1.3.1",
  "soupsieve==2.6",
  "stack-data==0.6.3",
  "starlette==0.46.2",
  "submitit",
  "sympy==1.13.1",
  "terminado==0.18.1",
  "tiktoken==0.9.0",
  "tinycss2==1.4.0",
  "tokenizers==0.21.1",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "torchvision==0.21.0",
  "tornado==6.4.2",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "transformers==4.51.3",
  "triton==3.2.0",
  "trl==0.17.0",
  "typer==0.15.2",
  "types-python-dateutil==2.9.0.20241206",
  "typing-extensions==4.13.2",
  "typing-inspection==0.4.0",
  "tzdata==2025.2",
  "uri-template==1.3.0",
  "urllib3==2.4.0",
  "uvicorn==0.34.2",
  "uvloop==0.21.0",
  "virtualenv==20.30.0",
  "vllm==0.8.4",
  "wandb==0.19.6",
  "watchfiles==1.0.5",
  "wcwidth==0.2.13",
  "webcolors==24.11.1",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "websockets==15.0.1",
  "wrapt==1.17.2",
  "xformers==0.0.29.post2",
  "xgrammar==0.1.18",
  "xxhash==3.5.0",
  "yarl==1.20.0",
  "zipp==3.21.0",
]

[project.optional-dependencies]
dev = ["hydra-submitit-launcher>=1.2.0", "ipykernel", "ipython", "pre-commit"]
gpu = ["bitsandbytes>=0.45.3", "vllm>=0.7.2"]

[tool.setuptools]
package-dir = { "" = "deep_math" }

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp311-cp311-linux_x86_64.whl" }

[dependency-groups]
dev = ["pre-commit>=4.2.0"]
