[project]
name = "deep-math"
version = "1.0.0"
description = "Library for training and evaluating Math agent."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Daniel Fleischer", email = "daniel.fleischer@intel.com"},
]
keywords = ["machine learning", "reinforcement learning", "mathematical reasoning", "AI agents", "GRPO", "NLP"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "accelerate==1.6.0",
  "datasets==3.5.0",
  "deepspeed==0.16.7",
  "flash-attn",
  "huggingface-hub==0.30.2",
  "hydra-core==1.3.2",
  "math-verify==0.7.0",
  "mistral-common==1.5.4",
  "omegaconf==2.3.0",
  "openai==1.76.0",
  "peft==0.15.2",
  "regex==2024.11.6",
  "smolagents==1.22.0",
  "submitit",
  "tiktoken==0.9.0",
  "transformers==4.53.0",
  "trl==0.17.0",
  "vllm==0.14.1",
]

[project.urls]
Homepage = "https://github.com/intellabs/DeepMath"
Repository = "https://github.com/intellabs/DeepMath"
Issues = "https://github.com/intellabs/DeepMath/issues"
Documentation = "https://github.com/intellabs/DeepMath#readme"

[project.optional-dependencies]
dev = ["hydra-submitit-launcher>=1.2.0", "ipykernel", "ipython", "pre-commit"]
gpu = ["bitsandbytes>=0.45.3", "vllm>=0.7.2"]

[tool.setuptools]
package-dir = { "" = "deep_math" }

[dependency-groups]
dev = ["pre-commit>=4.2.0"]
